Added css, js, home page

--- a/AnchoredinHim/AnchoredinHim.csproj
+++ b/AnchoredinHim/AnchoredinHim.csproj
@@ -191,6 +191,24 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\css\font-awesome.min.css" />
+    <Content Include="Content\css\ie8.css" />
+    <Content Include="Content\css\ie9.css" />
+    <Content Include="Content\css\main.css" />
+    <Content Include="Content\images\ATeamBmore.jpeg" />
+    <Content Include="Content\images\Blog.jpeg" />
+    <Content Include="Content\images\Calendar.jpeg" />
+    <Content Include="Content\images\Donate.jpg" />
+    <Content Include="Content\images\smokelight.jpeg" />
+    <Content Include="Content\images\Volunteer.jpeg" />
+    <Content Include="Content\js\html5shiv.js" />
+    <Content Include="Content\js\jquery.min.js" />
+    <Content Include="Content\js\jquery.scrollex.min.js" />
+    <Content Include="Content\js\jquery.scrolly.min.js" />
+    <Content Include="Content\js\main.js" />
+    <Content Include="Content\js\respond.min.js" />
+    <Content Include="Content\js\skel.min.js" />
+    <Content Include="Content\js\util.js" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
