--- a/AnchoredinHim/AnchoredinHim.csproj
+++ b/AnchoredinHim/AnchoredinHim.csproj
@@ -212,6 +212,7 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\css\Event.css" />
     <Content Include="Content\css\font-awesome.min.css" />
     <Content Include="Content\css\ie8.css" />
     <Content Include="Content\css\ie9.css" />
@@ -315,6 +316,8 @@
     <Content Include="Scripts\angular-cookies.min.js.map" />
     <Content Include="Scripts\angular-aria.min.js.map" />
     <Content Include="Scripts\angular-animate.min.js.map" />
+    <None Include=".bin\bower.cmd" />
+    <None Include=".bin\git.cmd" />
     <None Include=".bin\node.cmd" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\i18n\angular-locale_af-na.js" />
