--- a/AnchoredinHim/packages.config
+++ b/AnchoredinHim/packages.config
@@ -3,6 +3,7 @@
   <package id="angularjs" version="1.7.2" targetFramework="net461" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="4.1.3" targetFramework="net461" />
+  <package id="Bower" version="1.3.11" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
@@ -30,6 +31,7 @@
   <package id="Moment.js" version="2.22.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Node.js" version="5.3.0" targetFramework="net461" />
+  <package id="NoGit" version="0.0.8" targetFramework="net461" />
   <package id="popper.js" version="1.14.3" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net461" />
